Added and updated code based on few tickets
